fix(client/styles): remove whitespace in body

--- a/forum-app/packages/rest-client/src/index.scss
+++ b/forum-app/packages/rest-client/src/index.scss
@@ -1,7 +1,6 @@
 body,
 p {
   margin: 0;
-  white-space: pre-wrap;
 }
 
 @for $i from 1 through 6 {
